--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@ Is this correct order.</string>
     <string name="large">Large</string>
     <string name="test_txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
     <string name="condiments">Condiments</string>
-    <string name="login_txt">Do You Already Have An Account?</string>
+    <string name="login_txt">Do you already have an account?</string>
     <string name="click_here">Click Here</string>
     <string name="login">Login</string>
     <string name="guest_user">Guest User</string>
