--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,7 +47,8 @@ Is this correct order.</string>
     <string name="congratulations">Congratulations :</string>
     <string name="redeem_txt">You Will Get 100 Loyalty Points Redeem </string>
     <string name="redeem_coupon_code">Redeem Coupon Code</string>
-    <string name="coupon_code">Coupon Code</string>
+    <string name="coupon_code">Apply Coupon Code</string>
+    <string name="coupon">Enter Coupon Code</string>
     <string name="enter_loyalty_points">Enter loyalty points</string>
     <string name="loyalty_points_txt">You have % loyalty points</string>
     <string name="please_coupon_code">Please enter coupon code</string>
@@ -85,4 +86,5 @@ Is this correct order.</string>
     <string name="loyalty_points">Loyalty Points :</string>
     <string name="loyalty_txt">You dont have loyalty Points </string>
     <string name="thank_you_txt">Thank you</string>
+    <string name="item_plus">Quantity added..</string>
 </resources>
